# src/Resources/Account.php
@@ -5,6 +5,7 @@ declare(strict_types=1);
 namespace Ledga\Api\Resources;
 
 use DateTimeImmutable;
+use Ledga\Api\Enums\AccountCategory;
 use Ledga\Api\Enums\AccountType;
 use Ledga\Api\Enums\NormalBalance;
 
@@ -20,8 +21,8 @@ final readonly class Account implements ResourceInterface
         public string $name,
         public AccountType $type,
         public NormalBalance $normalBalance,
+        public AccountCategory $category,
         public ?string $parentId,
-        public ?string $category,
         public ?string $description,
         public string $balance,
         public bool $isActive,
@@ -44,8 +45,8 @@ final readonly class Account implements ResourceInterface
             name: $data['name'],
             type: AccountType::from($data['type']),
             normalBalance: NormalBalance::from($data['normal_balance']),
+            category: AccountCategory::from($data['category']),
             parentId: $data['parent_id'] ?? null,
-            category: $data['category'] ?? null,
             description: $data['description'] ?? null,
             balance: $data['balance'] ?? '0.00',
             isActive: $data['is_active'] ?? true,
